footer overflow mobile fix

--- a/styles/group-end.css
+++ b/styles/group-end.css
@@ -18,6 +18,7 @@ p {
 #cardContainer {
     width: 360px;
     margin: 0 auto;
+    
 }
 
 #cardContainer a {
@@ -27,6 +28,9 @@ p {
 .card.mt-3.container-fluid {
     width: 355px;
     background-color: #FFD1AA;
+}
+.add-margin {
+    margin-bottom: 11vh;
 }
 
 #no-button {
